spacing issue

--- a/src/app/carousel/carousel.component.css
+++ b/src/app/carousel/carousel.component.css
@@ -1,5 +1,7 @@
 .header {
   position: absolute;
+  top: 0;
+  left: 0;
   width: 110%;
   height: 10%;
   z-index: 9999;
@@ -37,10 +39,14 @@
   left: 10%;
 }
 .carouselMainDiv {
-  position: absolute;
-  margin: 0;
-  width: 100%;
-  height: 100%;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	position: absolute;
+	margin: 0;
+	width: 100%;
+	height: 100%;
 }
 
 .carouselmages {
